[project]
name = "pabumeasures"
version = "0.1.0"
description = "Measures on participatory budgeting elections"
readme = "README.md"
authors = [
    { name = "Michał Dobranowski", email = "mdbrnowski@gmail.com" },
    { name = "Jakub Wiśniewski", email = "wisniewskij514@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
