[project]
name = "pabumeasures"
version = "0.1.0"
description = "Measures on participatory budgeting elections"
readme = "README.md"
authors = [
    { name = "Michał Dobranowski", email = "mdbrnowski@gmail.com" },
    { name = "Jakub Wiśniewski", email = "wisniewskij514@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pabutools>=1.2.3",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.11.6", "pybind11>=3.0.1"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.{h,c,hpp,cpp}" },
    { file = "CMakeLists.txt" },
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*"]
