[project]
name = "pabumeasures"
version = "0.1.0"
description = "Measures on participatory budgeting elections"
readme = "README.md"
authors = [
    { name = "Michał Dobranowski", email = "mdbrnowski@gmail.com" },
    { name = "Jakub Wiśniewski", email = "wisniewskij514@gmail.com" },
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pabutools>=1.2.3",
]
keywords = ["participatory budgeting", "social choise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Changelog = "https://github.com/mdbrnowski/pabumeasures/releases"
Source = "https://github.com/mdbrnowski/pabumeasures"

[build-system]
requires = ["scikit-build-core>=0.11.6", "pybind11>=3.0.1"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.{h,c,hpp,cpp}" },
    { file = "CMakeLists.txt" },
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*"]
